# attotool

./: AGENTS.md  Cargo.toml  Dockerfile  README.md  rustfmt.toml  system_prompt.yaml
.github/workflows/: build-docker.yml  build-rust.yml  ci-build.yml  ci-test.yml  eval-execution-fetch-format-reusable.yml  eval-execution-fetch-url-anthropic-claude-3-haiku-json.yml  eval-execution-fetch-url-anthropic-claude-3-haiku-json_fixed_key.yml  eval-execution-fetch-url-anthropic-claude-3-haiku-yaml.yml  eval-execution-fetch-url-devstral-small-json.yml  eval-execution-fetch-url-devstral-small-json_fixed_key.yml  eval-execution-fetch-url-devstral-small-yaml.yml  eval-execution-fetch-url-gemma-3-27b-it-json.yml  eval-execution-fetch-url-gemma-3-27b-it-json_fixed_key.yml  eval-execution-fetch-url-gemma-3-27b-it-yaml.yml  eval-execution-fetch-url-glm-4-32b-json.yml  eval-execution-fetch-url-glm-4-32b-json_fixed_key.yml  eval-execution-fetch-url-glm-4-32b-yaml.yml  eval-execution-fetch-url-glm-4-32b.yml  eval-execution-fetch-url-google-gemini-2.5-flash-lite-json.yml  eval-execution-fetch-url-google-gemini-2.5-flash-lite-json_fixed_key.yml  eval-execution-fetch-url-google-gemini-2.5-flash-lite-yaml.yml  eval-execution-fetch-url-gpt-4o-mini-json.yml  eval-execution-fetch-url-gpt-4o-mini-json_fixed_key.yml  eval-execution-fetch-url-gpt-4o-mini-yaml.yml  eval-execution-fetch-url-gpt-4o-mini.yml  eval-execution-fetch-url-grok-4-fast-json.yml  (+299 more)
src/: app.rs  attotool.rs  event.rs  main.rs  output.rs  response_formats.rs  tool_handler.rs  tools.rs  tui.rs  yaml_parsing.rs  yaml_utilities.rs
