[package]
name = "attotool"
version = "0.1.0"
edition = "2024"

[dependencies]
async-openai = "0.30"
async-trait = "0.1"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
textwrap = "0.16"
ratatui = "0.26"
crossterm = { version = "0.27", features = ["event-stream"] }
futures = "0.3"
