[package]
name = "attotool"
version = "0.0.1"
edition = "2024"

[dependencies]
async-openai = "0.30"
async-trait = "0.1"
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
